@@ -457,20 +457,21 @@ class Cube(CFVariableMixin):
         if data_dim is None:
             raise ValueError('You must supply a data dimension for a dimensioned coord.')
         if isinstance(data_dim, collections.Container) and len(data_dim) != 1:
-            raise ValueError('The supplied data dimension must be a single number')            
-        if self.coords(dimensions=data_dim, dim_coords=True):
-            raise ValueError('A dim_coord is already associated with dimension %d.' % data_dim)
+            raise ValueError('The supplied data dimension must be a single number')
 
-        #TODO tidy this up
         # Convert data_dim to a single integer
         if isinstance(data_dim, collections.Container):
             data_dim = int(list(data_dim)[0])
         else:
             data_dim = int(data_dim)
-        
+
         # Check data_dim value is valid
         if data_dim < 0 or data_dim >= self.ndim:
             raise ValueError('The cube does not have the specified dimension (%d)' % data_dim)
+
+        # Check dimension is available
+        if self.coords(dimensions=data_dim, dim_coords=True):
+            raise ValueError('A dim_coord is already associated with dimension %d.' % data_dim)
 
         # Check compatibility with the shape of the data
         if dim_coord.shape[0] != self.shape[data_dim]:
